# tasksolver

./: Cargo.toml  LICENSE  README.md
src/: input_parser.rs  lib.rs  main.rs
src/file_executer/: file_executer.rs  mod.rs
src/server/: handlers.rs  mod.rs  models.rs  routes.rs  server.rs
src/worker_pool/: worker_pool.rs
tests/: integration_tests.rs
